--- a/PacmanJesperGreve2019/app/src/main/res/values/strings.xml
+++ b/PacmanJesperGreve2019/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PacmanJesperGreve2019</string>
+    <string name="GameTitle">Fish Game</string>
+    <string name="Play">Play</string>
+    <string name="Highscore">Highscore Top 100</string>
+    <string name="Score">Score</string>
+    <string name="action_settings">Settings</string>
+    <string name="HighScore_Back">Main Menu</string>
 </resources>
